--- a/AIFruit/MainClass/Category(分类)/Views/FruitInfoTableViewCell.xib
+++ b/AIFruit/MainClass/Category(分类)/Views/FruitInfoTableViewCell.xib
@@ -3,64 +3,55 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="115" id="KGk-i7-Jjw" customClass="FruitInfoTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="410" height="115"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="fruitInfo" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="410" height="114.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="114.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DRy-gW-k8K">
                         <rect key="frame" x="14" y="17" width="84" height="82"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2q9-e2-SIQ">
-                        <rect key="frame" x="113" y="14" width="268" height="28"/>
+                        <rect key="frame" x="112" y="8" width="268" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFf-Xr-mAg">
-                        <rect key="frame" x="177" y="50" width="46" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFf-Xr-mAg">
+                        <rect key="frame" x="177" y="38" width="46" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="已售" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOZ-gf-UiX">
-                        <rect key="frame" x="113" y="79" width="98" height="25.5"/>
+                        <rect key="frame" x="112" y="79" width="98" height="25.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.37580192478291613" green="0.73212594696969702" blue="0.29603870482885264" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Of8-ka-ZSl">
-                        <rect key="frame" x="112" y="50" width="57" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Of8-ka-ZSl">
+                        <rect key="frame" x="112" y="38" width="57" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="1" green="0.03014565537" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDN-mv-smP">
-                        <rect key="frame" x="218" y="53" width="176" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDN-mv-smP">
+                        <rect key="frame" x="112" y="67" width="176" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2Y-88-RK0">
+                        <rect key="frame" x="284" y="49" width="25" height="25"/>
+                        <state key="normal" title="Button" image="shopCar"/>
+                    </button>
                 </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="cFf-Xr-mAg" secondAttribute="bottom" constant="35.5" id="4iK-E8-9f1"/>
-                    <constraint firstItem="Of8-ka-ZSl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="104" id="9lG-nc-Mwb"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="PDN-mv-smP" secondAttribute="bottom" constant="38.5" id="QCU-0a-ih7"/>
-                    <constraint firstItem="PDN-mv-smP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="45" id="Uc5-Yj-G0z"/>
-                    <constraint firstItem="PDN-mv-smP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="210" id="auT-w7-3qI"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="PDN-mv-smP" secondAttribute="trailing" constant="8" id="fdz-8h-ftQ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Of8-ka-ZSl" secondAttribute="bottom" constant="35.5" id="igk-2X-tcY"/>
-                    <constraint firstItem="cFf-Xr-mAg" firstAttribute="leading" secondItem="Of8-ka-ZSl" secondAttribute="trailing" constant="8" id="lmQ-8d-C7W"/>
-                    <constraint firstItem="Of8-ka-ZSl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="42" id="tGi-Th-0w6"/>
-                    <constraint firstItem="cFf-Xr-mAg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="42" id="tgB-4s-sjY"/>
-                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="FruitNameLabel" destination="2q9-e2-SIQ" id="Qb1-mR-99U"/>
@@ -69,8 +60,12 @@
                 <outlet property="PrivilegePriceLabel" destination="Of8-ka-ZSl" id="rS4-u8-4hd"/>
                 <outlet property="saleNumLabel" destination="qOZ-gf-UiX" id="Xo7-Hq-9RV"/>
                 <outlet property="standardLabel" destination="PDN-mv-smP" id="IvN-76-GyP"/>
+                <outlet property="toCarBtn" destination="j2Y-88-RK0" id="w5I-d5-brG"/>
             </connections>
-            <point key="canvasLocation" x="367" y="170.5"/>
+            <point key="canvasLocation" x="436" y="207.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="shopCar" width="32" height="32"/>
+    </resources>
 </document>
