--- a/AIFruit/MainClass/ShoppingCar(购物车)/Views/shoppingCarStoryboard.storyboard
+++ b/AIFruit/MainClass/ShoppingCar(购物车)/Views/shoppingCarStoryboard.storyboard
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uTE-DM-OsZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qOa-TM-6cP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--Shopping Car Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="iPV-qD-iNY">
+            <objects>
+                <navigationController id="qOa-TM-6cP" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="W5i-kx-djE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="uTE-DM-OsZ" kind="relationship" relationship="rootViewController" id="vcQ-iC-dAg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5xU-Iy-F8D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-634.5" y="-205"/>
+        </scene>
+        <!--购物车-->
         <scene sceneID="CL6-xe-5wt">
             <objects>
                 <viewController id="uTE-DM-OsZ" customClass="shoppingCarController" sceneMemberID="viewController">
@@ -14,15 +31,16 @@
                         <viewControllerLayoutGuide type="bottom" id="XwU-9D-g4V"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VCe-PV-U7b">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="购物车" id="ke3-ud-46R"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o4P-yT-Jai" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="615" y="-135"/>
+            <point key="canvasLocation" x="52.5" y="-205"/>
         </scene>
     </scenes>
 </document>
